RESOLVED FIXED313207
Model stops spinning when leaving and returning to the tab
https://bugs.webkit.org/show_bug.cgi?id=313207
Summary Model stops spinning when leaving and returning to the tab
Mike Wyrzykowski
Reported 2026-04-23 20:23:54 PDT
Model stops spinning when leaving and returning to the tab
Attachments
Mike Wyrzykowski
Comment 1 2026-04-23 20:24:34 PDT
Mike Wyrzykowski
Comment 2 2026-04-23 20:34:31 PDT
EWS
Comment 3 2026-04-27 08:38:53 PDT
Committed 312098@main (99f975126b35): <https://commits.webkit.org/312098@main> Reviewed commits have been landed. Closing PR #63500 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.