Model stops spinning when leaving and returning to the tab https://bugs.webkit.org/show_bug.cgi?id=313207 rdar://174958659

Reviewed by Etienne Segonzac.

It should be possible to set the transform on a model prior to it
being loaded, so make supportsTransform static as it depends on zero
instance members / functions.

* Source/WebKit/WebProcess/GPU/graphics/Model/RemoteMeshProxy.cpp:
(WebKit::RemoteMeshProxy::supportsTransform):
(WebKit::RemoteMeshProxy::supportsTransform const): Deleted.
* Source/WebKit/WebProcess/GPU/graphics/Model/RemoteMeshProxy.h:
* Source/WebKit/WebProcess/Model/Mesh.h:
(WebKit::Mesh::supportsTransform const): Deleted.
* Source/WebKit/WebProcess/Model/WebModelPlayer.mm:
(WebKit::WebModelPlayer::supportsTransform):

Canonical link: https://commits.webkit.org/312098@main